- BUG: Issue #558: Crash in log dialog. (Stefan)
- BUG: Issue #559: Crash in moved-blocks
       detection in TortoiseMerge. (Stefan)
- BUG: Issue #561: unified diff shows
       absolute paths. (Stefan)
- NEW: Issue #551: Remember the 'ignore ancestry'
       option. (Stefan)
- NEW: Issue #552: Tri-State checkbox handling
       in repo browser. (Sergey Azarkevich)

Version 1.8.2
- BUG: Issue #522: OK button falsely enabled
       in lock dialog. (Stefan)
- BUG: Issue #523: merge log template is
       not saved. (Stefan)
- BUG: Issue #526: branch/tag fails to
       tag externals. (Stefan)
- BUG: Issue #527: Commands in log dialog fail
       if started for an url instead of a
       working copy path. (Stefan)
- BUG: Issue #528: Abort when editing
       file from repo browser. (Stefan)
- BUG: Issue #529: SVN Vendorbranch here
       does not copy all files. (Stefan)
- BUG: Issue #534: Compare Working on Multiple
       Updates broken in 1.8.x. (Stefan)
- BUG: Issue #535: diffing file externals
       shows empty base. (Stefan)
- CHG: Updated TortoisePlink to
       Putty/Plink v0.63. (Stefan)
- BUG: Issue #536: Crash in TortoiseMerge
       trying to find moved blocks. (Stefan)
- BUG: Issue #537: Unnecessary warning after
       successful auto-resolve. (Stefan)
- BUG: Issue #538: merging UI inconvenient when
       source branch was (re)moved. (Stefan)
- BUG: Issue #539: Junctions marked
       as versioned. (Stefan)
- BUG: Issue #540: Branch from SVN Log does
       not create intermediate folders. (Stefan)

Version 1.8.1
- BUG: Issue #481: wrong parameter when
       showing diff. (Stefan)
- BUG: Issue #482: user hook scripts not loaded
       and saved correctly. (Stefan)
- BUG: Issue #483: merge error
       "Invalid 'conflict_result' argument". (Stefan)
- BUG: Issue #484: Crash when providing a client
       certificate file. (Stefan)
- BUG: Issue #486: Assert when creating a
       unified diff. (Stefan)
- BUG: Issue #487: Crash when parsing urls